--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Start Bootstrap Theme</title>
+        <title>Missing Persons Database</title>
         <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -41,18 +41,5 @@
         <div class="container px-4 px-lg-5">Copyright &copy; Group 2 Missing Persons 2023</div>
         
     </footer>
-    
-    
-     </button>
-     <!-- Bootstrap core JS-->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-     <!-- Core theme JS-->
-     <script src="js/scripts.js"></script>
-     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-     <!-- * *                               SB Forms JS                               * *-->
-     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
-     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
-     <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
-    
     </body>
 </html>
