--- a/templates/appMP/index.html
+++ b/templates/appMP/index.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% block bodyContent %}       
+{% extends 'base.html' %} {% load static %} {% block bodyContent %}       
          <!-- Masthead-->
         <header class="masthead">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
