--- a/templates/appMP/person.html
+++ b/templates/appMP/person.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}{% block bodyContent %}
+{% extends 'base.html' %} {% load static %} {% block bodyContent %}
 <br>
 <br>
 <br>
